--- a/Assignment/Assignment/Assignment.csproj
+++ b/Assignment/Assignment/Assignment.csproj
@@ -4,9 +4,20 @@
     <NoWarn>1701;1702;CA1710;</NoWarn>
   </PropertyGroup>
 
+   <PropertyGroup>
+    <TargetFramework>net5.0</TargetFramework>
+    <IsPackable>false</IsPackable>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <EnableNETAnalyzers>true</EnableNETAnalyzers>
+    <CodeAnalysisTreatWarningsAsErrors>true</CodeAnalysisTreatWarningsAsErrors>
+    <LangVersion>9.0</LangVersion>
+    <Nullable>enable</Nullable>
+  </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\Assignment.Interfaces\Assignment.Interfaces.csproj" />
   </ItemGroup>
+
 
   <ItemGroup>
     <Compile Update="People.csv">
