--- a/Assignment9/Assignment9.Tests/Assignment9.Tests.csproj
+++ b/Assignment9/Assignment9.Tests/Assignment9.Tests.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>net5.0-windows</TargetFramework>
 
     <IsPackable>false</IsPackable>
+
+    <Nullable>disable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
